--- a/unbalanced-YoloV5.ipynb
+++ b/unbalanced-YoloV5.ipynb
@@ -56,7 +56,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AMNrGINUQ-K8",
-        "outputId": "86be9904-68e3-4e75-d85e-5e744425d2e5"
+        "outputId": "428861d6-b04e-4d33-a813-2d92574baab7"
       },
       "outputs": [
         {
@@ -96,9 +96,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BXJuHcCfRPcE",
-        "outputId": "5ddbf4c9-07ea-4fbd-dc66-70109a5b6412"
+        "outputId": "4268875a-0205-48af-b0ec-c275bfd76ee5"
       },
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -108,10 +108,8 @@
             "fatal: destination path 'yolov5' already exists and is not an empty directory.\n",
             "/content/drive/MyDrive/yolov5\n",
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Collecting gitpython>=3.1.30 (from -r requirements.txt (line 5))\n",
-            "  Downloading GitPython-3.1.31-py3-none-any.whl (184 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m184.3/184.3 kB\u001b[0m \u001b[31m13.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: matplotlib>=3.3 in /usr/local/lib/python3.10/dist-packages (from -r requirements.txt (line 6)) (3.7.1)\n",
+            "Requirement already satisfied: gitpython>=3.1.30 in /usr/local/lib/python3.10/dist-packages (from -r requirements.txt (line 5)) (3.1.31)\n",
+            "Requirement already satisfied: matplotlib>=3.3 in /usr/local/lib/python3.10/dist-packages (from -r requirements.txt (line 6)) (3.7.1)\n",
             "Requirement already satisfied: numpy>=1.18.5 in /usr/local/lib/python3.10/dist-packages (from -r requirements.txt (line 7)) (1.22.4)\n",
             "Requirement already satisfied: opencv-python>=4.1.1 in /usr/local/lib/python3.10/dist-packages (from -r requirements.txt (line 8)) (4.7.0.72)\n",
             "Requirement already satisfied: Pillow>=7.1.2 in /usr/local/lib/python3.10/dist-packages (from -r requirements.txt (line 9)) (8.4.0)\n",
@@ -119,21 +117,16 @@
             "Requirement already satisfied: PyYAML>=5.3.1 in /usr/local/lib/python3.10/dist-packages (from -r requirements.txt (line 11)) (6.0)\n",
             "Requirement already satisfied: requests>=2.23.0 in /usr/local/lib/python3.10/dist-packages (from -r requirements.txt (line 12)) (2.27.1)\n",
             "Requirement already satisfied: scipy>=1.4.1 in /usr/local/lib/python3.10/dist-packages (from -r requirements.txt (line 13)) (1.10.1)\n",
-            "Collecting thop>=0.1.1 (from -r requirements.txt (line 14))\n",
-            "  Downloading thop-0.1.1.post2209072238-py3-none-any.whl (15 kB)\n",
+            "Requirement already satisfied: thop>=0.1.1 in /usr/local/lib/python3.10/dist-packages (from -r requirements.txt (line 14)) (0.1.1.post2209072238)\n",
             "Requirement already satisfied: torch>=1.7.0 in /usr/local/lib/python3.10/dist-packages (from -r requirements.txt (line 15)) (2.0.1+cu118)\n",
             "Requirement already satisfied: torchvision>=0.8.1 in /usr/local/lib/python3.10/dist-packages (from -r requirements.txt (line 16)) (0.15.2+cu118)\n",
             "Requirement already satisfied: tqdm>=4.64.0 in /usr/local/lib/python3.10/dist-packages (from -r requirements.txt (line 17)) (4.65.0)\n",
-            "Collecting ultralytics>=8.0.100 (from -r requirements.txt (line 18))\n",
-            "  Downloading ultralytics-8.0.115-py3-none-any.whl (595 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m595.6/595.6 kB\u001b[0m \u001b[31m64.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: pandas>=1.1.4 in /usr/local/lib/python3.10/dist-packages (from -r requirements.txt (line 27)) (1.5.3)\n",
+            "Requirement already satisfied: ultralytics>=8.0.100 in /usr/local/lib/python3.10/dist-packages (from -r requirements.txt (line 18)) (8.0.115)\n",
+            "Requirement already satisfied: pandas>=1.1.4 in /usr/local/lib/python3.10/dist-packages (from -r requirements.txt (line 27)) (1.5.3)\n",
             "Requirement already satisfied: seaborn>=0.11.0 in /usr/local/lib/python3.10/dist-packages (from -r requirements.txt (line 28)) (0.12.2)\n",
             "Requirement already satisfied: setuptools>=65.5.1 in /usr/local/lib/python3.10/dist-packages (from -r requirements.txt (line 42)) (67.7.2)\n",
-            "Collecting gitdb<5,>=4.0.1 (from gitpython>=3.1.30->-r requirements.txt (line 5))\n",
-            "  Downloading gitdb-4.0.10-py3-none-any.whl (62 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m62.7/62.7 kB\u001b[0m \u001b[31m10.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=3.3->-r requirements.txt (line 6)) (1.0.7)\n",
+            "Requirement already satisfied: gitdb<5,>=4.0.1 in /usr/local/lib/python3.10/dist-packages (from gitpython>=3.1.30->-r requirements.txt (line 5)) (4.0.10)\n",
+            "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=3.3->-r requirements.txt (line 6)) (1.0.7)\n",
             "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=3.3->-r requirements.txt (line 6)) (0.11.0)\n",
             "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=3.3->-r requirements.txt (line 6)) (4.39.3)\n",
             "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=3.3->-r requirements.txt (line 6)) (1.4.4)\n",
@@ -153,13 +146,10 @@
             "Requirement already satisfied: cmake in /usr/local/lib/python3.10/dist-packages (from triton==2.0.0->torch>=1.7.0->-r requirements.txt (line 15)) (3.25.2)\n",
             "Requirement already satisfied: lit in /usr/local/lib/python3.10/dist-packages (from triton==2.0.0->torch>=1.7.0->-r requirements.txt (line 15)) (16.0.5)\n",
             "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.10/dist-packages (from pandas>=1.1.4->-r requirements.txt (line 27)) (2022.7.1)\n",
-            "Collecting smmap<6,>=3.0.1 (from gitdb<5,>=4.0.1->gitpython>=3.1.30->-r requirements.txt (line 5))\n",
-            "  Downloading smmap-5.0.0-py3-none-any.whl (24 kB)\n",
+            "Requirement already satisfied: smmap<6,>=3.0.1 in /usr/local/lib/python3.10/dist-packages (from gitdb<5,>=4.0.1->gitpython>=3.1.30->-r requirements.txt (line 5)) (5.0.0)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.7->matplotlib>=3.3->-r requirements.txt (line 6)) (1.16.0)\n",
             "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.10/dist-packages (from jinja2->torch>=1.7.0->-r requirements.txt (line 15)) (2.1.2)\n",
-            "Requirement already satisfied: mpmath>=0.19 in /usr/local/lib/python3.10/dist-packages (from sympy->torch>=1.7.0->-r requirements.txt (line 15)) (1.3.0)\n",
-            "Installing collected packages: smmap, gitdb, gitpython, ultralytics, thop\n",
-            "Successfully installed gitdb-4.0.10 gitpython-3.1.31 smmap-5.0.0 thop-0.1.1.post2209072238 ultralytics-8.0.115\n"
+            "Requirement already satisfied: mpmath>=0.19 in /usr/local/lib/python3.10/dist-packages (from sympy->torch>=1.7.0->-r requirements.txt (line 15)) (1.3.0)\n"
           ]
         }
       ]
@@ -6422,9 +6412,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ccak6kaLmwaG",
-        "outputId": "578a1b56-614d-4795-8eb1-94eab710f672"
+        "outputId": "80b364cb-64d7-4b19-f23e-8f7db84277a7"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -6437,25 +6427,28 @@
             "\n",
             "Fusing layers... \n",
             "YOLOv5x summary: 322 layers, 86260891 parameters, 0 gradients, 204.0 GFLOPs\n",
-            "\u001b[34m\u001b[1mval: \u001b[0mScanning /content/drive/MyDrive/yolov5/vinbig-1/valid/labels.cache... 566 images, 0 backgrounds, 0 corrupt: 100% 566/566 [00:00<?, ?it/s]\n",
-            "                 Class     Images  Instances          P          R      mAP50   mAP50-95: 100% 36/36 [00:24<00:00,  1.47it/s]\n",
-            "                   all        566       3620      0.687      0.599      0.611      0.323\n",
-            "    Aortic enlargement        566        350      0.848      0.886       0.89      0.521\n",
-            "           Atelectasis        566        114      0.813        0.8      0.814      0.482\n",
-            "         Calcification        566         89      0.498      0.371       0.38      0.124\n",
-            "          Cardiomegaly        566        258      0.894      0.857      0.902      0.542\n",
-            "         Consolidation        566        162      0.838      0.639      0.769       0.45\n",
-            "                   ILD        566        115        0.6      0.617       0.58      0.287\n",
-            "          Infiltration        566        186      0.712      0.554      0.591      0.286\n",
-            "          Lung Opacity        566        367      0.653      0.513      0.502      0.264\n",
-            "           Nodule-Mass        566        357      0.578      0.345      0.368      0.149\n",
-            "          Other lesion        566        282      0.672      0.415      0.458      0.232\n",
-            "      Pleural effusion        566        273      0.652      0.619      0.599      0.249\n",
-            "    Pleural thickening        566        529      0.487       0.42      0.375      0.148\n",
-            "          Pneumothorax        566         66      0.727      0.818      0.814      0.549\n",
-            "    Pulmonary fibrosis        566        472      0.651       0.53      0.511      0.236\n",
-            "Speed: 0.1ms pre-process, 25.8ms inference, 3.7ms NMS per image at shape (16, 3, 416, 416)\n",
-            "Results saved to \u001b[1mruns/val/exp2\u001b[0m\n"
+            "Downloading https://ultralytics.com/assets/Arial.ttf to /root/.config/Ultralytics/Arial.ttf...\n",
+            "100% 755k/755k [00:00<00:00, 25.4MB/s]\n",
+            "\u001b[34m\u001b[1mval: \u001b[0mScanning /content/drive/MyDrive/yolov5/vinbig-1/test/labels... 1119 images, 0 backgrounds, 0 corrupt: 100% 1119/1119 [06:33<00:00,  2.84it/s]\n",
+            "\u001b[34m\u001b[1mval: \u001b[0mNew cache created: /content/drive/MyDrive/yolov5/vinbig-1/test/labels.cache\n",
+            "                 Class     Images  Instances          P          R      mAP50   mAP50-95: 100% 70/70 [00:42<00:00,  1.65it/s]\n",
+            "                   all       1119       6994      0.722      0.622      0.645      0.351\n",
+            "    Aortic enlargement       1119        685      0.879      0.892      0.902      0.513\n",
+            "           Atelectasis       1119        232      0.826       0.78      0.816      0.493\n",
+            "         Calcification       1119        256      0.619       0.43      0.444       0.18\n",
+            "          Cardiomegaly       1119        468      0.872        0.9      0.907      0.547\n",
+            "         Consolidation       1119        299      0.863      0.639       0.79      0.447\n",
+            "                   ILD       1119        226      0.536      0.527      0.498      0.258\n",
+            "          Infiltration       1119        388      0.707      0.549      0.606      0.316\n",
+            "          Lung Opacity       1119        690      0.632      0.516      0.524      0.275\n",
+            "           Nodule-Mass       1119        429      0.672      0.476      0.481      0.209\n",
+            "          Other lesion       1119        548      0.701      0.449      0.503      0.278\n",
+            "      Pleural effusion       1119        545      0.701      0.677      0.674      0.335\n",
+            "    Pleural thickening       1119       1100      0.568      0.484      0.457      0.194\n",
+            "          Pneumothorax       1119        123      0.862      0.862      0.885      0.613\n",
+            "    Pulmonary fibrosis       1119       1005      0.672      0.525      0.541      0.255\n",
+            "Speed: 0.1ms pre-process, 23.5ms inference, 3.0ms NMS per image at shape (16, 3, 416, 416)\n",
+            "Results saved to \u001b[1mruns/val/exp3\u001b[0m\n"
           ]
         }
       ]
@@ -12041,11 +12034,11 @@
         "!pip install -r requirements.txt"
       ],
       "metadata": {
-        "id": "mqeWzrWMIcld",
-        "outputId": "066b6a16-2a2f-4cc0-e037-5756b25d7bac",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "mqeWzrWMIcld",
+        "outputId": "066b6a16-2a2f-4cc0-e037-5756b25d7bac"
       },
       "execution_count": 2,
       "outputs": [
@@ -12190,11 +12183,11 @@
         "!pip install addict"
       ],
       "metadata": {
-        "id": "BGDowuiPRREa",
-        "outputId": "f031d007-9ea3-4f32-cccd-6aa079ae327d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "BGDowuiPRREa",
+        "outputId": "f031d007-9ea3-4f32-cccd-6aa079ae327d"
       },
       "execution_count": 3,
       "outputs": [
@@ -12217,11 +12210,11 @@
         "!pip install timm"
       ],
       "metadata": {
-        "id": "8GmjvuH5RTyu",
-        "outputId": "2612b7d5-16b0-4718-e255-00360a95f7e6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8GmjvuH5RTyu",
+        "outputId": "2612b7d5-16b0-4718-e255-00360a95f7e6"
       },
       "execution_count": 4,
       "outputs": [
@@ -12272,11 +12265,11 @@
         "!python scripts/train.py  --batch 16 --epochs 20 --data configs/data.yaml --cfg configs/model_resnet.yaml --weights \"/content/drive/MyDrive/vinbig.v3i.yolov5pytorch/best.pt\" --freeze 10"
       ],
       "metadata": {
-        "id": "XFzju9mwJUT8",
-        "outputId": "6cd921fa-3f33-4eef-984d-afde7791f96d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "XFzju9mwJUT8",
+        "outputId": "6cd921fa-3f33-4eef-984d-afde7791f96d"
       },
       "execution_count": 26,
       "outputs": [
